[package]
name = "hunter"
version = "0.1.0"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1", features = ["derive"] }
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["full"] }
url = "2.1"
